tests/schemas/error/010_missing_impl_protocol.fcp
version: "3"

struct S1 {
    field1 @0 : MissingType,
}

impl can for {
    some_field: 1,
}
